plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.tistory.aircook'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

// If you use sprinb-boot 3.2.0 + mybatis-spring-boot-starter 3.0.2, you will see following error. have to use 3.0.3
// Invalid value type for attribute 'factoryBeanObjectType': java.lang.String

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	//Spring Data Redis 설정을 추가하면 자동으로 기본 캐시가 ConcurrentMapCache 에서 RedisCache 로 설정됩니다.
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	implementation 'com.google.guava:guava:32.1.3-jre'
	implementation 'org.apache.commons:commons-lang3'
	compileOnly 'org.projectlombok:lombok'
	compileOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.xerial:sqlite-jdbc'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
}

tasks.named('test') {
	// -XX:+EnableDynamicAgentLoading: to avoid "WARNING: A Java agent has been loaded dynamically"
	// -Xshare:off: to avoid "Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended"
	jvmArgs = [
			'-XX:+EnableDynamicAgentLoading',
			'-Xshare:off',
	]
	useJUnitPlatform()
}
